@@ -24,6 +24,7 @@
  * OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
  * WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
+#define _GNU_SOURCE
 #include <stdio.h>
 #include <stdlib.h>
 #include <glib.h>
@@ -65,10 +66,14 @@ g_log_set_fatal_mask (const gchar *log_domain, GLogLevelFlags fatal_mask)
 void
 g_logv (const gchar *log_domain, GLogLevelFlags log_level, const gchar *format, va_list args)
 {
+	char *msg;
+	
+	vasprintf (&msg, format, args);
 	printf ("%s%s%s",
 		log_domain != NULL ? log_domain : "",
 		log_domain != NULL ? ": " : "",
-		format);
+		msg);
+	free (msg);
 	if (log_level & fatal)
 		abort ();
 }
